feat : 유저 초기셋업 API 작성, 이메일 인증 구현 #S2P-44
Signed-off-by: WOOJIN SON <swj1265@naver.com>